syntax = "proto3";
  import "core/common.proto";
  option go_package = "github.com/torabian/fireback/modules/geo";
  

      
service LocationDatas {
  rpc LocationDataActionCreate (LocationDataEntity) returns (LocationDataCreateReply) {}
  rpc LocationDataActionUpdate (LocationDataEntity) returns (LocationDataCreateReply) {}

  rpc LocationDataActionQuery (QueryFilterRequest) returns (LocationDataQueryReply) {}
  rpc LocationDataActionGetOne (QueryFilterRequest) returns (LocationDataReply) {}
  rpc LocationDataActionRemove (QueryFilterRequest) returns (RemoveReply) {}
}

message LocationDataCreateReply {
	LocationDataEntity data  = 1;
	IError error = 2;
}

message LocationDataReply {
	LocationDataEntity data = 1;
	IError error = 2;
}

message LocationDataQueryReply {
	repeated LocationDataEntity items = 1;
	int64 totalItems = 2;
	int64 itemsPerPage = 3;
	int64 startIndex = 4;
	IError error = 5;
}





 



message LocationDataEntity {
  optional string visibility = 1; // @tag(yaml:"visibility")
  optional string workspaceId = 2; // @tag(yaml:"workspaceId")
  optional string linkerId = 3; // @tag(yaml:"linkerId")
  optional string parentId = 4; // @tag(yaml:"parentId")
  optional LocationDataEntity parent = 5; // @tag(yaml:"parent")
  string uniqueId = 6; // @tag(gorm:"primarykey;uniqueId;unique;not null;size:100;" yaml:"uniqueId")
  optional string userId = 7; // @tag(yaml:"userId")
  optional double lat = 9; // @tag(  yaml:"lat"  )
  optional double lng = 10; // @tag(  yaml:"lng"  )
  optional string physicalAddress = 11; // @tag(  yaml:"physicalAddress"  )
  int64 rank = 12; // @tag(gorm:"type:int;name:rank")
  int64 updated = 13; // @tag(gorm:"autoUpdateTime:nano")
  int64 created = 14; // @tag(gorm:"autoUpdateTime:nano")
  string createdFormatted = 15; // @tag(sql:"-")
  string updatedFormatted = 16; // @tag(sql:"-")


}







